RESOLVED FIXED20173
wx port does not show tooltips
https://bugs.webkit.org/show_bug.cgi?id=20173
Summary wx port does not show tooltips
Kevin Watters
Reported 2008-07-25 14:09:17 PDT
The wx port's ChromeClient didn't implement the setToolTip method.
Attachments
implement ChromeClientWx::setToolTip (1.83 KB, patch)
2008-07-25 14:12 PDT, Kevin Watters
eric: review-
Revised tooltip support patch for the wx port. (1.88 KB, patch)
2008-07-27 13:10 PDT, Kevin Watters
sam: review+
Kevin Watters
Comment 1 2008-07-25 14:12:27 PDT
Created attachment 22481 [details] implement ChromeClientWx::setToolTip Implements ChromeClientWx::setToolTip and modifies wxWebView's mouse event handler to use EventHandler::mouseMoved instead of handleMouseMoveEvent.
Eric Seidel (no email)
Comment 2 2008-07-26 22:52:31 PDT
Comment on attachment 22481 [details] implement ChromeClientWx::setToolTip Looks fine except for the tabs. WebCore uses 4 spaces, not tabs. Also, which way is the easier conversion? + if (!tooltip || tooltip->GetTip() != wxString(tip)) + m_webView->SetToolTip(tip); From wxString to String or the other way? I'm surprised that you need the explicit wxString conversion there at all. Since you don't have the ability to commit your own patches (yet), please upload a new patch without tabs. Thanks!
Kevin Watters
Comment 3 2008-07-27 13:10:40 PDT
Created attachment 22508 [details] Revised tooltip support patch for the wx port. Removed all the tabs. Unfortunately, the explicit wxString conversion is necessary at the moment--the compiler complains about ambiguous overloads. Perhaps a future patch could resolve this.
Kevin Ollivier
Comment 4 2008-07-29 22:34:54 PDT
Landed in r35437, thanks! :)
Note You need to log in before you can comment on or make changes to this bug.