Reviewed by Sam Weinig.

Add tooltip support to the wx port.

https://bugs.webkit.org/show_bug.cgi?id=20173


Canonical link: https://commits.webkit.org/27861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35437 268f45cc-cd09-0410-ab3c-d52691b4dbfc